startkde: Disable session management in our session management

We have two types of session restore, ksmserver for ICE clients and a
small fallback app that runs after ksmserver for any stragglers.

This fallback app is a gui application, as such it will try and connect
to ksmserver. This isn't useful and can cause a block.

BUG: 488853